Feature/general update (#86)
* Added handling of 429 error code("Rate limit exceeded")

* bump versions of used libs

(cherry picked from commit 0984aedbce59b6b70a58cd4d97a192e95dfb9e7f)

* upgrade to gradle wrapper to v5.5.1

* use openjdk 11 on travis build

* update codacy-coverage-reporter to v. 6.0.0

* update gradle task for codacy

* fix: dependencies updated

* chore: changes for new version

* chore(CI): GitLab Actions added

* chore(CI): GitLab Actions refactored

* chore(CI): GitLab Actions refactored

* chore(CI): GitLab Actions versions updated

* chore(CI): GitLab Action gradle run updated

* chore(CI): GitLab Action gradle run updated

* chore(CI): GitLab Action gradle run updated

* chore(CI): GitLab Action gradle run updated

* chore(CI): GitLab Action gradle run updated

* chore(CI): GitLab Action gradle run updated

* chore(CI): split actions

* chore(CI): split actions

* chore(docs): missing comments added

* fix(CI): invocation fix

* fix(api): refactored

* fix(itest): pass vars

* fix(itest): pass vars

* chore(ci): scan added

* chore(ci): publish only releases

* chore(ci): publish only releases

* fix(codacy): issues solved

* fix(codacy): issues solved

* chore: updated for personal access token

* fix: updated for personal access token

---------

Co-authored-by: Alexander Deyneka <deynekalex@gmail.com>