@@ -9,15 +9,18 @@ package com.sybit.airtable;
 import com.google.gson.annotations.SerializedName;
 import com.sybit.airtable.exception.AirtableException;
 import com.sybit.airtable.exception.HttpResponseExceptionHandler;
-import com.sybit.airtable.vo.*;
+import com.sybit.airtable.vo.Attachment;
+import com.sybit.airtable.vo.Delete;
+import com.sybit.airtable.vo.PostRecord;
+import com.sybit.airtable.vo.RecordItem;
+import com.sybit.airtable.vo.Records;
+import kong.unirest.GetRequest;
 import kong.unirest.HttpResponse;
 import kong.unirest.Unirest;
 import kong.unirest.UnirestException;
-import kong.unirest.GetRequest;
 import org.apache.commons.beanutils.BeanUtils;
 import org.apache.commons.beanutils.BeanUtilsBean;
 import org.apache.commons.beanutils.PropertyUtils;
-import org.apache.http.client.HttpResponseException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -25,6 +28,7 @@ import javax.lang.model.SourceVersion;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ThreadLocalRandom;
@@ -34,17 +38,20 @@ import java.util.concurrent.TimeUnit;
 /**
  * Representation Class of Airtable Tables.
  *
- * @param <T>
+ * @param <T> Type of Table.
  * @since 0.1
  */
 public class Table<T> {
 
     private static final Logger LOG = LoggerFactory.getLogger(Table.class);
-    
+
     private static final String MIME_TYPE_JSON = "application/json";
-    
+
     private static final String FIELD_ID = "id";
     private static final String FIELD_CREATED_TIME = "createdTime";
+    public static final String HTTP_HEADER_ACCEPT = "accept";
+    public static final String HTTP_HEADER_AUTHORIZATION = "Authorization";
+    public static final String HTTP_HEADER_CONTENT_TYPE = "Content-type";
 
     private final String name;
     private final Class<T> type;
@@ -52,7 +59,7 @@ public class Table<T> {
     private Base parent;
 
     /**
-     *
+     * Constructor of Table.
      * @param name name of table.
      * @param type class to represent table row
      */
@@ -66,7 +73,7 @@ public class Table<T> {
 
     /**
      * Constructor of Table.
-     * 
+     *
      * @param name Name of Table
      * @param type Class to map the rows.
      * @param base Base containing table.
@@ -79,7 +86,7 @@ public class Table<T> {
 
     /**
      * Set the parent base.
-     * 
+     *
      * @param parent parent base of table.
      */
     public void setParent(Base parent) {
@@ -90,10 +97,9 @@ public class Table<T> {
      * Select all rows of table.
      *
      * @return List of all items.
-     * @throws AirtableException
-     * @throws org.apache.http.client.HttpResponseException
+     * @throws AirtableException if error occurs.
      */
-    public List<T> select() throws AirtableException, HttpResponseException {
+    public List<T> select() throws AirtableException {
         return select(new Query() {
             @Override
             public Integer getMaxRecords() {
@@ -107,7 +113,7 @@ public class Table<T> {
 
             @Override
             public List<Sort> getSort() {
-                return null;
+                return Collections.emptyList();
             }
 
             @Override
@@ -117,7 +123,7 @@ public class Table<T> {
 
             @Override
             public String[] getFields() {
-                return null;
+                return new String[0];
             }
 
             @Override
@@ -138,22 +144,21 @@ public class Table<T> {
      *
      * @param query defined query
      * @return list of table items
-     * @throws AirtableException
+     * @throws AirtableException if error occurs.
      */
     @SuppressWarnings("WeakerAccess")
     public List<T> select(final Query query) throws AirtableException {
         HttpResponse<Records> response;
         try {
             final GetRequest request = Unirest.get(getTableEndpointUrl())
-                    .header("accept", MIME_TYPE_JSON)
-                    .header("Authorization", getBearerToken())
-                    .header("Content-type" , MIME_TYPE_JSON);
+                    .header(HTTP_HEADER_ACCEPT, MIME_TYPE_JSON)
+                    .header(HTTP_HEADER_AUTHORIZATION, getBearerToken())
+                    .header(HTTP_HEADER_CONTENT_TYPE, MIME_TYPE_JSON);
 
             if (query.getFields() != null && query.getFields().length > 0) {
                 String[] fields = query.getFields();
                 for (String field : fields) {
                     request.queryString("fields[]", field);
-
                 }
             }
             if (query.getMaxRecords() != null) {
@@ -167,7 +172,7 @@ public class Table<T> {
             }
             if (query.getPageSize() != null) {
                 if (query.getPageSize() > 100) {
-                    LOG.warn("pageSize is limited to max 100 but was " + query.getPageSize());
+                    LOG.warn("pageSize is limited to max 100 but was {}", query.getPageSize());
                     request.queryString("pageSize", 100);
                 } else {
                     request.queryString("pageSize", query.getPageSize());
@@ -184,7 +189,7 @@ public class Table<T> {
                 request.queryString("offset", query.getOffset());
             }
 
-            LOG.debug("URL=" + request.getUrl());
+            LOG.debug("URL={}", request.getUrl());
 
             response = request.asObject(Records.class);
         } catch (UnirestException e) {
@@ -202,7 +207,7 @@ public class Table<T> {
                 list.addAll(this.select(query, offset));
             }
         } else if (404 == code) {
-            throw new AirtableException("Table not found: " + this.name );            
+            throw new AirtableException("Table not found: " + this.name );
         } else if (429 == code) {
             randomWait();
             return select(query);
@@ -228,10 +233,10 @@ public class Table<T> {
     /**
      * Get <code>List</code> by given offset.
      *
-     * @param query 
-     * @param offset
-     * @return
-     * @throws AirtableException
+     * @param query query to execute.
+     * @param offset offset of records.
+     * @return list of items.
+     * @throws AirtableException if error occurs.
      */
     private List<T> select(Query query, String offset) throws AirtableException {
         return select(new Query() {
@@ -276,11 +281,10 @@ public class Table<T> {
      * Select with parameter maxRecords
      *
      * @param maxRecords maximum of records per request.
-     * @return
-     * @throws AirtableException
-     * @throws HttpResponseException
+     * @return list of items.
+     * @throws AirtableException if error occurs.
      */
-    public List<T> select(Integer maxRecords) throws AirtableException, HttpResponseException {
+    public List<T> select(Integer maxRecords) throws AirtableException {
         return select(new Query() {
             @Override
             public Integer getMaxRecords() {
@@ -294,7 +298,7 @@ public class Table<T> {
 
             @Override
             public List<Sort> getSort() {
-                return null;
+                return Collections.emptyList();
             }
 
             @Override
@@ -304,7 +308,7 @@ public class Table<T> {
 
             @Override
             public String[] getFields() {
-                return null;
+                return new String[0];
             }
 
             @Override
@@ -320,14 +324,13 @@ public class Table<T> {
     }
 
     /**
-     * Select data of table by definied view.
+     * Select data of table by defined view.
      *
-     * @param view
-     * @return
-     * @throws AirtableException
-     * @throws HttpResponseException
+     * @param view name of view.
+     * @return list of items.
+     * @throws AirtableException if error occurs.
      */
-    public List<T> select(String view) throws AirtableException, HttpResponseException {
+    public List<T> select(String view) throws AirtableException {
         return select(new Query() {
             @Override
             public Integer getMaxRecords() {
@@ -341,7 +344,7 @@ public class Table<T> {
 
             @Override
             public List<Sort> getSort() {
-                return null;
+                return Collections.emptyList();
             }
 
             @Override
@@ -351,7 +354,7 @@ public class Table<T> {
 
             @Override
             public String[] getFields() {
-                return null;
+                return new String[0];
             }
 
             @Override
@@ -367,14 +370,13 @@ public class Table<T> {
     }
 
     /**
-     * select Table data with defined sortation
+     * select Table data with defined sortation.
      *
-     * @param sortation
-     * @return
-     * @throws AirtableException
-     * @throws HttpResponseException
+     * @param sortation  sortation of result set.
+     * @return list of items.
+     * @throws AirtableException if error occurs.
      */
-    public List<T> select(Sort sortation) throws AirtableException, HttpResponseException {
+    public List<T> select(Sort sortation) throws AirtableException {
         final List<Sort> sortList = new ArrayList<>();
         sortList.add(sortation);
 
@@ -401,7 +403,7 @@ public class Table<T> {
 
             @Override
             public String[] getFields() {
-                return null;
+                return new String[0];
             }
 
             @Override
@@ -421,10 +423,9 @@ public class Table<T> {
      *
      * @param fields array of requested fields.
      * @return list of item using only requested fields.
-     * @throws AirtableException
-     * @throws HttpResponseException
+     * @throws AirtableException if error occurs.
      */
-    public List<T> select(String[] fields) throws AirtableException, HttpResponseException {
+    public List<T> select(String[] fields) throws AirtableException {
 
         return select(new Query() {
             @Override
@@ -439,7 +440,7 @@ public class Table<T> {
 
             @Override
             public List<Sort> getSort() {
-                return null;
+                return Collections.emptyList();
             }
 
             @Override
@@ -467,19 +468,19 @@ public class Table<T> {
     /**
      * Get List of records of response.
      *
-     * @param response
-     * @return
+     * @param response response of request.
+     * @return list of records.
      */
     private List<T> getList(HttpResponse<Records> response) {
 
         final Records records = response.getBody();
         final List<T> list = new ArrayList<>();
 
-        for (Map<String, Object> record : records.getRecords()) {
+        for (Map<String, Object>  rec: records.getRecords()) {
             T item = null;
             try {
-                item = transform(record, this.type.newInstance());
-            } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
+                item = transform(rec, this.type.getDeclaredConstructor().newInstance());
+            } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
                 LOG.error(e.getMessage(), e);
             }
             list.add(item);
@@ -492,7 +493,7 @@ public class Table<T> {
      *
      * @param id id of record.
      * @return searched record.
-     * @throws AirtableException
+     * @throws AirtableException if error occurs.
      */
     public T find(final String id) throws AirtableException {
 
@@ -501,8 +502,8 @@ public class Table<T> {
         HttpResponse<RecordItem> response;
         try {
             response = Unirest.get(getTableEndpointUrl() + "/" + id)
-                    .header("accept", MIME_TYPE_JSON)
-                    .header("Authorization", getBearerToken())
+                    .header(HTTP_HEADER_ACCEPT, MIME_TYPE_JSON)
+                    .header(HTTP_HEADER_AUTHORIZATION, getBearerToken())
                     .asObject(RecordItem.class);
         } catch (UnirestException e) {
             throw new AirtableException(e);
@@ -520,8 +521,12 @@ public class Table<T> {
         }
 
         try {
-            return transform(body, this.type.newInstance());
-        } catch (InvocationTargetException | IllegalAccessException | InstantiationException e) {
+            if(body != null) {
+                return transform(body, this.type.getDeclaredConstructor().newInstance());
+            } else {
+                return null;
+            }
+        } catch (InvocationTargetException | IllegalAccessException | InstantiationException | NoSuchMethodException e) {
             throw new AirtableException(e);
         }
     }
@@ -531,10 +536,10 @@ public class Table<T> {
      *
      * @param item the item to be created
      * @return the created item
-     * @throws AirtableException
-     * @throws IllegalAccessException
-     * @throws InvocationTargetException
-     * @throws NoSuchMethodException
+     * @throws AirtableException if error occurs.
+     * @throws IllegalAccessException if error occurs.
+     * @throws InvocationTargetException if error occurs.
+     * @throws NoSuchMethodException if error occurs.
      */
     public T create(final T item) throws AirtableException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
 
@@ -542,15 +547,15 @@ public class Table<T> {
 
         checkProperties(item);
 
-        PostRecord body = new PostRecord<>();
+        PostRecord<T> body = new PostRecord<>();
         body.setFields(item);
 
         HttpResponse<RecordItem> response;
         try {
             response = Unirest.post(getTableEndpointUrl())
-                    .header("accept", MIME_TYPE_JSON)
-                    .header("Authorization", getBearerToken())
-                    .header("Content-type", MIME_TYPE_JSON)
+                    .header(HTTP_HEADER_ACCEPT, MIME_TYPE_JSON)
+                    .header(HTTP_HEADER_AUTHORIZATION, getBearerToken())
+                    .header(HTTP_HEADER_CONTENT_TYPE, MIME_TYPE_JSON)
                     .body(body)
                     .asObject(RecordItem.class);
         } catch (UnirestException e) {
@@ -569,7 +574,11 @@ public class Table<T> {
         }
 
         try {
-            return transform(responseBody, this.type.newInstance());
+            if(responseBody!= null) {
+                return transform(responseBody, this.type.getDeclaredConstructor().newInstance());
+            } else {
+                return null;
+            }
         } catch (InvocationTargetException | IllegalAccessException | InstantiationException e) {
             LOG.error(e.getMessage(), e);
         }
@@ -579,28 +588,28 @@ public class Table<T> {
 
     /**
      * Update given <code>item</code> in storage.
-     * 
+     *
      * @param item Item to update.
      * @return updated <code>item</code> returned by airtable.
-     * @throws AirtableException
-     * @throws IllegalAccessException
-     * @throws InvocationTargetException
-     * @throws NoSuchMethodException 
+     * @throws AirtableException if error occurs.
+     * @throws IllegalAccessException if error occurs.
+     * @throws InvocationTargetException if error occurs.
+     * @throws NoSuchMethodException if error occurs.
      */
     public T update(final T item) throws AirtableException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
         RecordItem responseBody = null;
 
         String id = getIdOfItem(item);
 
-        PostRecord body = new PostRecord<>();
+        PostRecord<T> body = new PostRecord<>();
         body.setFields(filterFields(item));
 
         HttpResponse<RecordItem> response;
         try {
             response = Unirest.patch(getTableEndpointUrl() + "/" + id)
-                    .header("accept", MIME_TYPE_JSON)
-                    .header("Authorization", getBearerToken())
-                    .header("Content-type", MIME_TYPE_JSON)
+                    .header(HTTP_HEADER_ACCEPT, MIME_TYPE_JSON)
+                    .header(HTTP_HEADER_AUTHORIZATION, getBearerToken())
+                    .header(HTTP_HEADER_CONTENT_TYPE, MIME_TYPE_JSON)
                     .body(body)
                     .asObject(RecordItem.class);
         } catch (UnirestException e) {
@@ -620,7 +629,11 @@ public class Table<T> {
 
         T result;
         try {
-            result = transform(responseBody, this.type.newInstance());
+            if(responseBody != null) {
+                result = transform(responseBody, this.type.getDeclaredConstructor().newInstance());
+            } else {
+                result = null;
+            }
         } catch (InvocationTargetException | IllegalAccessException | InstantiationException e) {
             LOG.error(e.getMessage(), e);
             result = null;
@@ -630,9 +643,9 @@ public class Table<T> {
     }
 
     /**
-     * 
-     * @param item
-     * @return 
+     * Replace the given item in storage.
+     * @param item item to replace.
+     * @return replaced item.
      */
     public T replace(T item) {
 
@@ -644,19 +657,17 @@ public class Table<T> {
      *
      * @param id Id of the row to delete.
      * @return true if success.
-     * @throws AirtableException
+     * @throws AirtableException if error occurs.
      */
-
     public boolean destroy(String id) throws AirtableException {
-
 
         boolean isDeleted;
 
         HttpResponse<Delete> response;
         try {
             response = Unirest.delete(getTableEndpointUrl() + "/" + id)
-                    .header("accept", MIME_TYPE_JSON)
-                    .header("Authorization", getBearerToken())
+                    .header(HTTP_HEADER_ACCEPT, MIME_TYPE_JSON)
+                    .header(HTTP_HEADER_AUTHORIZATION, getBearerToken())
                     .asObject(Delete.class);
         } catch (UnirestException e) {
             throw new AirtableException(e);
@@ -682,8 +693,8 @@ public class Table<T> {
     }
 
     /**
-     *
-     * @return
+     * Get the parent base.
+     * @return parent base.
      */
     private Base base() {
         return parent;
@@ -702,27 +713,27 @@ public class Table<T> {
     /**
      * Get Bearer Token for Authentication Header.
      *
-     * @return
+     * @return Bearer Token.
      */
     private String getBearerToken() {
-        return "Bearer " + base().airtable().apiKey();
+        return "Bearer " + base().airtable().accessToken();
     }
 
     /**
-     *
-     * @param record
-     * @param retval
-     * @return
-     * @throws IllegalAccessException
-     * @throws InstantiationException
+     * Transform the record to the given type.
+     * @param rec record to transform.
+     * @param type type of transformation.
+     * @return transformed record.
+     * @throws IllegalAccessException if error occurs.
      */
-    private T transform(Map<String, Object> record, T retval) throws InvocationTargetException, IllegalAccessException {
-        for (String key : record.keySet()) {
+    private T transform(Map<String, Object> rec, T type) throws InvocationTargetException, IllegalAccessException {
+        T retval = type;
+        for (String key : rec.keySet()) {
             if ("fields".equals(key)) {
                 //noinspection unchecked
-                retval = transform((Map<String, Object>) record.get("fields"), retval);
+                retval = transform((Map<String, Object>) rec.get("fields"), type);
             } else {
-                setProperty(retval, key, record.get(key));
+                setProperty(retval, key, rec.get(key));
             }
         }
 
@@ -730,18 +741,19 @@ public class Table<T> {
     }
 
     /**
-     *
-     * @param record
-     * @param retval
-     * @return
-     * @throws InvocationTargetException
-     * @throws IllegalAccessException
+     * Transform the record to the given type.
+     * @param rec record to transform.
+     * @param type Type to  transform into
+     * @return transformed record.
+     * @throws InvocationTargetException if error occurs.
+     * @throws IllegalAccessException if error occurs.
      */
-    private T transform(RecordItem record, T retval) throws InvocationTargetException, IllegalAccessException {
-        setProperty(retval, FIELD_ID, record.getId());
-        setProperty(retval, FIELD_CREATED_TIME, record.getCreatedTime());
+    private T transform(RecordItem rec, T type) throws InvocationTargetException, IllegalAccessException {
+        T retval = type;
+        setProperty(retval, FIELD_ID, rec.getId());
+        setProperty(retval, FIELD_CREATED_TIME, rec.getCreatedTime());
 
-        retval = transform(record.getFields(), retval);
+        retval = transform(rec.getFields(), retval);
 
         return retval;
     }
@@ -773,9 +785,9 @@ public class Table<T> {
         if (propertyExists(retval, property)) {
             BeanUtils.setProperty(retval, property, value);
         } else {
-            if(!foundSerializedNameAnnotation && !SourceVersion.isName(property))
-                LOG.error(String.format("Key '%s' contains illegal characters for a java identifier, but no field with a matching @SerializedName is present for type %s.", property, this.type.getName()));
-
+            if(!foundSerializedNameAnnotation && !SourceVersion.isName(property)) {
+                LOG.error("Key '{}' contains illegal characters for a java identifier, but no field with a matching @SerializedName is present for type {}.", property, this.type.getName());
+            }
             throw new IllegalArgumentException(this.type.getName() + " does not have a property corresponding to [" + property + "]");
         }
     }
@@ -783,17 +795,17 @@ public class Table<T> {
     /**
      * Convert AirTable ColumnName to Java PropertyName.
      *
-     * @param key
-     * @return
+     * @param key column name
+     * @return property name
      */
     String key2property(final String key) {
-        
+
         if(key == null || key.isEmpty()) {
             throw new IllegalArgumentException("Key was null or empty.");
         }
 
         String property = key.trim();
-        property = property.substring(0, 1).toLowerCase() + property.substring(1, property.length());
+        property = property.substring(0, 1).toLowerCase() + property.substring(1);
 
         return property;
     }
@@ -813,11 +825,11 @@ public class Table<T> {
     /**
      * Checks if the Property Values of the item are valid for the Request.
      *
-     * @param item
-     * @throws AirtableException
-     * @throws IllegalAccessException
-     * @throws InvocationTargetException
-     * @throws NoSuchMethodException
+     * @param item the item to check
+     * @throws AirtableException if error occurs.
+     * @throws IllegalAccessException  if error occurs.
+     * @throws InvocationTargetException if error occurs.
+     * @throws NoSuchMethodException if error occurs.
      */
     private void checkProperties(T item) throws AirtableException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
 
@@ -840,28 +852,29 @@ public class Table<T> {
 
     /**
      * Check properties of Attachement objects.
-     * 
-     * @param attachements
-     * @throws AirtableException
-     * @throws IllegalAccessException
-     * @throws InvocationTargetException
-     * @throws NoSuchMethodException 
+     *
+     * @param attachments list of attachments.
+     * @throws AirtableException if error occurs.
+     * @throws IllegalAccessException if error occurs.
+     * @throws InvocationTargetException if error occurs.
+     * @throws NoSuchMethodException if error occurs.
      */
-    private void checkPropertiesOfAttachement(List<Attachment> attachements) throws AirtableException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
+    private void checkPropertiesOfAttachement(List<Attachment> attachments) throws AirtableException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
 
-        if (attachements != null) {
-            for (int i = 0; i < attachements.size(); i++) {
-                if (propertyExists(attachements.get(i), FIELD_ID) || propertyExists(attachements.get(i), "size") 
-                        || propertyExists(attachements.get(i), "type") || propertyExists(attachements.get(i), "filename")) {
-                    
-                    final Field[] attributesPhotos = attachements.getClass().getDeclaredFields();
+        if (attachments != null) {
+            for (int i = 0; i < attachments.size(); i++) {
+                if (propertyExists(attachments.get(i), FIELD_ID) || propertyExists(attachments.get(i), "size")
+                        || propertyExists(attachments.get(i), "type") || propertyExists(attachments.get(i), "filename")) {
+
+                    final Field[] attributesPhotos = attachments.getClass().getDeclaredFields();
                     for (Field attributePhoto : attributesPhotos) {
                         final String namePhotoAttribute = attributePhoto.getName();
-                        if (FIELD_ID.equals(namePhotoAttribute) || "size".equals(namePhotoAttribute) 
-                                || "type".equals(namePhotoAttribute) || "filename".equals(namePhotoAttribute)) {
-                            if (BeanUtils.getProperty(attachements.get(i), namePhotoAttribute) != null) {
-                                throw new AirtableException("Property " + namePhotoAttribute + " should be null!");
-                            }
+                        if ((FIELD_ID.equals(namePhotoAttribute)
+                                || "size".equals(namePhotoAttribute)
+                                || "type".equals(namePhotoAttribute)
+                                || "filename".equals(namePhotoAttribute)
+                            ) && (BeanUtils.getProperty(attachments.get(i), namePhotoAttribute) != null)) {
+                            throw new AirtableException("Property " + namePhotoAttribute + " should be null!");
                         }
                     }
                 }
@@ -870,14 +883,14 @@ public class Table<T> {
     }
 
     /**
-     * Get the String Id from the item.
+     * Get the String id of the item.
      *
-     * @param item
-     * @return
-     * @throws AirtableException
-     * @throws IllegalAccessException
-     * @throws InvocationTargetException
-     * @throws NoSuchMethodException
+     * @param item the item to get the id from.
+     * @return the id of the item.
+     * @throws AirtableException if error occurs.
+     * @throws IllegalAccessException if error occurs.
+     * @throws InvocationTargetException if error occurs.
+     * @throws NoSuchMethodException if error occurs.
      */
     private String getIdOfItem(T item) throws AirtableException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
 
@@ -891,15 +904,14 @@ public class Table<T> {
     }
 
     /**
-     *
      * Filter the Fields of the PostRecord Object. Id and created Time are set
-     * to null so Object Mapper doesent convert them to JSON.
+     * to null so Object Mapper doesn't convert them to JSON.
      *
-     * @param item
-     * @return
-     * @throws IllegalAccessException
-     * @throws InvocationTargetException
-     * @throws NoSuchMethodException
+     * @param item the item to filter
+     * @return the filtered item
+     * @throws IllegalAccessException if error occurs.
+     * @throws InvocationTargetException if error occurs.
+     * @throws NoSuchMethodException if error occurs.
      */
     private T filterFields(T item) throws IllegalAccessException, InvocationTargetException, NoSuchMethodException {
 
@@ -907,7 +919,7 @@ public class Table<T> {
 
         for (Field attribute : attributes) {
             String attrName = attribute.getName();
-            if ((FIELD_ID.equals(attrName) || FIELD_CREATED_TIME.equals(attrName)) 
+            if ((FIELD_ID.equals(attrName) || FIELD_CREATED_TIME.equals(attrName))
                     && (BeanUtils.getProperty(item, attrName) != null)) {
                 BeanUtilsBean.getInstance().getPropertyUtils().setProperty(item, attrName, null);
             }
@@ -915,5 +927,4 @@ public class Table<T> {
 
         return item;
     }
-
 }
